--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -2,6 +2,7 @@
   width: 150px;
   border: 2px solid rgb(65, 65, 65);
   border-radius: 50%;
+  margin-top: 50px;
 }
 
 .modalName {
@@ -30,12 +31,55 @@
   margin-bottom: 10px;
 }
 
+.closeModal{
+  padding: 35px 20px;
+}
+
+.closeModalImg{
+  margin: 0;
+  padding: 0;
+  width: 35px;
+}
+
 @media (max-width: 463px) {
   .modalImg {
     width: 100px;
+    margin-top: 30px;
+  }
+
+
+  .closeModal{
+    padding: 40px 20px;
+  }
+
+  .closeModalImg{
+    margin: 0;
+    padding: 0;
+    width: 25px;
   }
 
   .modalName {
-    font-size: 30px;
+    font-size: 25px;
+  }
+
+  .modalBtn {
+    font-size: 20px;
+  }
+
+  .modalActiveBtn {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 426px) {
+  .closeModal{
+    padding: 35px 25px;
+  }
+}
+
+
+@media (max-width: 320px) {
+  .closeModal{
+    padding: 36px 10px;
   }
 }
