ajustando o x do modal

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -32,8 +32,7 @@
 }
 
 .closeModal{
-  position: fixed;
-  padding: 2rem 20px;
+  padding: 35px 20px;
 }
 
 .closeModalImg{
@@ -50,8 +49,7 @@
 
 
   .closeModal{
-    padding: 2.2rem 20px;
-    position: fixed;
+    padding: 40px 20px;
   }
 
   .closeModalImg{
@@ -75,15 +73,13 @@
 
 @media (max-width: 426px) {
   .closeModal{
-    padding: 2rem 25px;
-    position: fixed;
+    padding: 35px 25px;
   }
 }
 
 
 @media (max-width: 320px) {
   .closeModal{
-    padding: 2rem 10px;
-    position: fixed;
+    padding: 36px 10px;
   }
 }
