--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,5 +8,5 @@ body{
   background-color: rgb(14, 20, 27);
   height: 100vh;
   padding: 0px px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: sans-serif;
 }
