--- a/src/components/projectsCard/style.module.scss
+++ b/src/components/projectsCard/style.module.scss
@@ -26,6 +26,9 @@ font-family: 'Times New Roman', Times, serif;
   
 
 .card{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 300px;
   height: 340px;
   border-radius: 20px;
@@ -66,6 +69,11 @@ font-family: 'Times New Roman', Times, serif;
     transform: translateY(0);
   }
 
+  &:hover .cardLink {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
 
 
   div {
@@ -88,6 +96,23 @@ font-family: 'Times New Roman', Times, serif;
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
+.cardLink{
+  padding: 3px 7px;
+  margin: 3px;
+  border: 1px solid green;
+  border-radius: 10px;
+  background-color:rgb(72, 250, 110);
+  color: black;
+  font-size: 16px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+
+    &:hover {
+    background-color: rgb(4, 245, 56);   
+  }
+}
+
 
 .seeGit{
   color: white;
@@ -102,8 +127,7 @@ font-family: 'Times New Roman', Times, serif;
   padding-left: 5px;
 
   &:hover {
-    color: rgb(0, 0, 140);   
-    text-decoration: none; 
+    color: rgb(0, 85, 155);   
   }
 }
 
@@ -513,6 +537,13 @@ font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
     padding-top: 20px;
   }
+
+  .cardLink{
+  padding: 3px 7px;
+  margin-top: 3px;
+  color: black;
+  font-size: 14px;
+}
 
   .seeGit{
     color: white;
