--- a/src/components/qualificationCard/style.module.scss
+++ b/src/components/qualificationCard/style.module.scss
@@ -5,12 +5,15 @@
 .cardSection{
   display: flex;
   justify-content: center;
-  gap: 170px;
+  gap: 120px;
 }
 
 .card{
-  width: 260px;
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 320px;
+  height: 380px;
   padding: 10px;
   margin: 30px 0px;
   border-radius: 20px;
@@ -64,12 +67,12 @@
 
 .cardTitle{
   padding: 5px 10px;
-  font-size: 25px;
+  font-size: 28px;
   font-weight: bolder;
 }
 
 .cardDescription {
-  font-size: 18px;
+  font-size: 20px;
   padding: 5px 10px 5px 10px;
   color: white;
   opacity: 0;
@@ -78,7 +81,7 @@
 }
 
 .cardConclusion{
-  font-size: 14px;
+  font-size: 18px;
   font-weight: bold;
   padding: 5px 10px 5px 10px;
   color: white;
@@ -273,10 +276,10 @@
 
 
   .card{
-    width: 450px;
+    width: 400px;
     height: 500px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   
   }
 
@@ -324,9 +327,9 @@
 
   .card{
     width: 300px;
-    height: 350px;
+    height: 370px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   
   }
 
@@ -372,7 +375,7 @@
     width: 300px;
     height: 350px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   
   }
 
@@ -418,7 +421,7 @@
     width: 250px;
     height: 300px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   
   }
 
